@@ -205,6 +205,21 @@ export default {
     });
   },
 
+  formatBytes(bytes) {
+    let units = ['KB','MB','GB','TB','PB','EB','ZB','YB'];
+    let thresh = 1024;
+    if (bytes < thresh) {
+      return bytes + ' B';
+    }
+
+    let u = -1;
+    do {
+      bytes /= thresh;
+      ++u;
+    } while (bytes >= thresh);
+    return bytes.toFixed(1) + ' ' + units[u];
+  },
+
   arrayIsEqual: arrayIsEqual,
   objectMatchesSubset: objectMatchesSubset,
   compareArrays: compareArrays,
